--- a/clicache/integration-test2/CMakeLists.txt
+++ b/clicache/integration-test2/CMakeLists.txt
@@ -37,6 +37,7 @@ add_library( ${PROJECT_NAME} SHARED
   CacheXmlTests.cs
   CqOperationTest.cs
   FunctionExecutionTest.cs
+  PoolAttributes.cs
   QueryTest.cs
   RegionTest.cs
   RegionSSLTest.cs
