Mostly gitting testThinClientCacheables to work

--- a/cppcache/integration-test/CMakeLists.txt
+++ b/cppcache/integration-test/CMakeLists.txt
@@ -194,7 +194,7 @@ set_tests_properties(testDataOutput
 
 set_tests_properties(testOverflowPutGetSqLite 
     testThinClientAfterRegionLive
-    testThinClientCacheables
+    #testThinClientCacheables
     testThinClientCq
     testThinClientCqFailover
     testThinClientCqHAFailover
