Add CachingProxyTest_F - allows measuring impact of restarting cluster for each test

--- a/cppcache/integration/test/CMakeLists.txt
+++ b/cppcache/integration/test/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(cpp-integration-test
   BasicIPv6Test.cpp
   CacheWriterTest.cpp
   CachingProxyTest.cpp
+  CachingProxyTest_F.cpp
   CacheXmlTest.cpp
   CleanIdleConnections.cpp
   ClientTransactionXATest.cpp
